--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ h1 {
     text-align: center; 
     padding: 20px;  
     /* background-color: #7C96AB;   */
-    color: #4e677c; 
+    color: #688dab; 
     }  
     h1:hover{
         font-size:40px;
